--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                                 <div class="current-mood-display">
                                     <span class="current-emoji">😊</span>
                                     <span class="current-label">Heureux</span>
+                                    <span class="last-update"></span>
                                 </div>
                                 <p class="last-update">Dernière mise à jour: <span
                                         id="last-update-time">Aujourd'hui</span></p>
