Modify logo description in index.html
Updated logo description to include creator's name and link.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- Logo principal -->
             <div class="login-logo">
                 <h1 class="logo-title">MoodFlow</h1>
-                <p class="logo-description">Votre bien-être au quotidien</p>
+                <p class="logo-description">Créé par <a href="https://portfolio-bouziri.netlify.app/" target="_blank">Amine BOUZIRI</a></p>
             </div>
 
             <!-- Formulaire de connexion -->
