--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             <!-- Section héro avec sélecteur d'humeur -->
             <section class="hero-section" id="mood-selector">
                 <div class="hero-container">
+                    <h2>Créé par <a href="https://portfolio-bouziri.netlify.app/" target="_blank"> Amine BOUZIRI </a></h2>
                     <h2 class="hero-title">Comment vous sentez-vous aujourd'hui ?</h2>
                     <p class="hero-subtitle">Sélectionnez votre humeur actuelle</p>
 
