--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                 <div class="logo">
                     <h1>MoodFlow</h1>
                     <span class="logo-subtitle">Votre bien-être au quotidien</span>
+                    <span>Créé par <a href="https://portfolio-bouziri.netlify.app/" target="_blank">Amine BOUZIRI</a></span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#dashboard" class="nav-link active">Dashboard</a></li>
